[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/scenes/menus/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -220.0
offset_right = 200.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MACHINE SHOP
OF TOMORROW"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(0.7, 0.8, 1.0, 1)

[node name="ButtonContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DiscoveryButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(280, 52)
text = "Discovery Mode"
theme_override_font_sizes/font_size = 18

[node name="InventorButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(280, 52)
text = "Inventor Mode"
theme_override_font_sizes/font_size = 18

[node name="MachinesButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(280, 52)
text = "My Machines"
theme_override_font_sizes/font_size = 18

[node name="SandboxButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(280, 48)
text = "Free Build"
theme_override_font_sizes/font_size = 16

[node name="SettingsButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(280, 48)
text = "Settings"
theme_override_font_sizes/font_size = 16

[node name="StarsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.5, 0.55, 0.65, 1)
